@@ -10,6 +10,9 @@
     Basics.pod 0.9.0 and Grammar.pod 0.7.1 and PerlHosted.pod 0.4.1.  The
     other pre-existing versioned files are unchanged.
 
+    * (MuldisD.pm)  Updated the DESCRIPTION to mention Muldis D in
+    retrospect having some designs in common with FoxPro or xBase.
+
     * (Basics.pod)  Added a TERMINOLOGY item for "universal" to specify
     that Muldis D does not allow sets to be members of themselves, and more
     generally that no type or value definitions may be recursive; so
@@ -50,6 +53,9 @@
     subsections that describe the various name spaces, and interpretation.
 
     * (Basics.pod)  Temporarily emptied the ENTITY NAMES section.
+
+    * (Basics.pod)  Added new RESOURCE MODULARITY AND PERSISTENCE main
+    section.
 
     * (Basics.pod)  Added new/rewritten SYSTEM CATALOG main section.
 
